minor changes in code and channels list

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,4 @@
 [Telegram API credentials]
-api_id = api_id
-api_hash = api_hash
-phone = phone
+api_id = 24008181
+api_hash = a9fbe488c982afaf4d9c1e8d7111c8fa
+phone = +79254489355
